--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,42 @@ header {
     padding: 1rem 0;
     position: sticky;
     top: 0;
-    background: grey;
+    background: #BEE3DB;
     z-index: 999;
 }
+
+.hero {
+    width: 100%;
+}
+
+.nav-icon {
+    width: 100px;
+}
+
+.icon-bar {
+    width: 90%;
+    overflow: auto;
+    margin: 0 auto;
+  }
+  
+.icon-bar a {
+    float: left; /* Float links side by side */
+    text-align: center; /* Center-align text */
+    width: 25%; /* Equal width (5 icons with 20% width each = 100%) */
+    padding: 12px 0; /* Some top and bottom padding */
+    transition: all 0.3s ease; /* Add transition for hover effects */
+    color: white; /* White text color */
+    font-size: 36px; /* Increased font size */
+    border-bottom: 5px solid #00B058;
+  }
+  
+.icon-bar a:hover {
+    background-color: #BEE3DB;
+  }
+  
+.active {
+    background-color: #04AA6D; /* Add an active/current color */
+  }
 
 /* SCREEN 2 */
 
