--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,22 @@ header {
     background: red;
 }
 
+/* FORM */
+
+.input-container input {
+	padding: 0.75rem 0.5rem;
+    border: #89B0AE solid 1px;
+    border-radius: 5px;
+    color: #112F5C;
+}
+
+.input-containter label {
+	margin-bottom: 0.5rem;
+    font-size: 0.9rem;
+    font-weight: 600;
+    color: black;
+}
+
 /* FOOTER NAVIGATION */
 
 nav {
