--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ a {
 }
 
 a:hover {
-  background-color: rgba(58, 117, 130, 0.7);
+  background-color: rgba(58, 117, 130, 0.9);
   color: white;
 }
 .back-button {
@@ -144,6 +144,11 @@ a:hover {
 	font-size: 17px;
 	padding: 1rem;
     border-radius: 10px;
+}
+
+.form-submit:hover {
+	background-color: rgba(58, 117, 130, 0.9);
+    color: white;
 }
 
 /* FOOTER NAVIGATION */
