--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     font-family: sans-serif;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -94,6 +95,12 @@ header {
 
 .nav-icon {
     width: 100px;
+    margin-bottom: 0.5rem;
+}
+
+.icon-text {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
 }
 
 .classIcons {
