UPDATED - camper icon + form fixed

--- a/css/style.css
+++ b/css/style.css
@@ -224,35 +224,46 @@ a {
       background-color: #3A7582;
       color: white;
       border-radius: 20%;
+      margin-left: 1rem;
   }
   
   .form-trip {
       padding-top: 1rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
   }
   
   .input-container select {
-      width: 100%;
+      width: 95%;
       padding: 12px;
       border: 1px solid #ccc;
       border-radius: 4px;
       box-sizing: border-box;
       margin-top: 6px;
       margin-bottom: 16px;
+      margin-left: 1rem;
       resize: vertical;
   }
   
   .form-details {
       border-top: 5px solid rgba(137, 176, 174, 0.5);
       padding-top: 1rem;
+      padding-left: 1rem;
+      padding-right: 1rem;
   }
   
   .input-container input {
-      width: 100%;
+      width: 95%;
       padding: 12px 20px;
       margin: 8px 0;
       display: inline-block;
       border: #89B0AE solid 1px;
       border-radius: 5px;
+      margin-left: 1rem;
+  }
+
+  .form-subheader {
+    margin-left: 1rem;
   }
   
   .form-submit {
@@ -266,6 +277,7 @@ a {
       font-size: 17px;
       padding: 1rem;
       border-radius: 10px;
+      margin-bottom: 1rem;
   }
   
   .form-submit:hover {
